tempo/ingress/istio/base/tempo-vs-https.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tempo-vs-https
  namespace: $(namespace)
spec:
  gateways:
  - tempo-gateway
  hosts:
  - "$(TEMPO_DOMAINNAME)"
  http:
  - headers:
      request:
        set:
          X-Forwarded-Proto: https
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tempo-gateway.monitoring.svc
        port:
          number: 3200
